Changed file paths from /img => /assets

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/deb08f485c.js" crossorigin="anonymous"></script>
 </head>
@@ -16,7 +16,7 @@
     <header id="header">
         <div class="container">
             <nav>
-                <a href="#header"><img src="img/dlorriman-logo.png" class="logo"></a>
+                <a href="#header"><img src="assets/dlorriman-logo.png" class="logo"></a>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="img/dlorriman-about-me.png" alt="">
+                    <img src="assets/dlorriman-about-me.png" alt="">
                 </div>
                 <div class="about-col-2">
                     <h2 class="sub-title">About Me</h2>
@@ -107,7 +107,7 @@
             <h2 class="sub-title">My Work</h2>
             <div class="work-list">
                 <div class="work">
-                    <img src="img/work-1.png" alt="">
+                    <img src="assets/work-1.png" alt="">
                     <div class="layer">
                         <h3>Project Name</h3>
                         <p>A short description about the project.</p>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="img/work-2.png" alt="">
+                    <img src="assets/work-2.png" alt="">
                     <div class="layer">
                         <h3>Project Name</h3>
                         <p>A short description about the project.</p>
@@ -124,7 +124,7 @@
 
                 </div>
                 <div class="work">
-                    <img src="img/westend.png" alt="">
+                    <img src="assets/westend.png" alt="">
                     <div class="layer">
                         <h3>Westend House</h3>
                         <p>Website for a luxury guesthouse. Built on Wordpress using the Astra Theme and Elementor Page Builder.</p>
@@ -149,7 +149,7 @@
                         <a href="https://www.linkedin.com/in/dlorriman/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://twitter.com/d_lorriman" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    <a href="img/my-cv.pdf" target="_blank" rel="noopener noreferrer" class="btn">My Resume</a>
+                    <a href="assets/my-cv.pdf" target="_blank" rel="noopener noreferrer" class="btn">My Resume</a>
                 </div>
                 <div class="contact-right">
                     <form>
