--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
             <div class="header-text">
                 <p>Hi! I'm David Lorriman</p>
-                <h1>Full Stack<br>Web Developer</h1>
+                <h1>A Full Stack<br>Web Developer</h1>
             </div>
         </div>
     </header>
